--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .App {
     margin: 0 auto;
     height: 100%;
@@ -17,6 +19,26 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(180deg, #E6D4DE 0%, #9890C7 100%);
+    background: linear-gradient(180deg,  #8CE0EB 0%, #D2CCB1 100%);
     height: calc(100vh - 60px);
+}
+
+h2 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 33px;
+    text-align: right;
+    color: #2D2E46;
+}
+
+h4 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: #2D2E46;
+    opacity: 0.5;
 }
