--- a/src/App.css
+++ b/src/App.css
@@ -22,14 +22,17 @@
     background: linear-gradient(180deg,  #8CE0EB 0%, #D2CCB1 100%);
     height: calc(100vh - 60px);
 }
+
 .mainBlock{
     background-color: white;
     padding: 30px;
     border-radius: 8px;
 }
+
 .mainBlock button {
     margin: 40px 0;
     border-radius: 40px;
+    box-shadow: 0px 4px 18px rgba(33, 38, 143, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 }
 
 h2 {
