--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
     background-color: white;
     padding: 30px;
     border-radius: 8px;
+    box-shadow: 0px 4px 18px rgba(115, 146, 108, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 }
 
 .mainBlock button {
@@ -43,6 +44,7 @@ h2 {
     line-height: 33px;
     text-align: right;
     color: #2D2E46;
+    word-wrap: break-word;
 }
 
 h4 {
