--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,11 @@
     box-shadow: 0px 4px 18px rgba(33, 38, 143, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 }
 
+.button__primary {
+    background-color: chartreuse;
+}
+
+
 h2 {
     font-family: Poppins;
     font-style: normal;
