--- a/src/App.css
+++ b/src/App.css
@@ -30,11 +30,11 @@
     box-shadow: 0px 4px 18px rgba(115, 146, 108, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 }
 
-.mainBlock button {
-    margin: 40px 0;
-    border-radius: 40px;
-    box-shadow: 0px 4px 18px rgba(33, 38, 143, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
-}
+/*.mainBlock button {*/
+/*    margin: 40px 0;*/
+/*    border-radius: 40px;*/
+/*    box-shadow: 0px 4px 18px rgba(33, 38, 143, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);*/
+/*}*/
 
 .button__primary {
     background-color: chartreuse;
