--- a/src/components/utils/Controls/Paginator.module.css
+++ b/src/components/utils/Controls/Paginator.module.css
@@ -4,6 +4,7 @@
 
 .paginator {
     margin: 10px;
+    display: inline-block;
 }
 
 .pageNumber {
@@ -39,6 +40,9 @@
     height: 25px;
     border: 3px solid gray;
     border-radius: 50%;
+}
+ :disabled {
+    opacity:0.1;
 }
 .arrowLeft:after {
     position: absolute;
