--- a/src/App.css
+++ b/src/App.css
@@ -36,11 +36,19 @@
     padding: 25px;
 }
 
-/*.mainBlock button {*/
-/*    margin: 40px 0;*/
-/*    border-radius: 40px;*/
-/*    box-shadow: 0px 4px 18px rgba(33, 38, 143, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);*/
-/*}*/
+.bottom__panel {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    padding-top: 15px;
+}
+
+
+.authBlock button {
+    margin: 40px 0;
+    border-radius: 40px;
+    box-shadow: 0px 4px 18px rgba(33, 38, 143, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+}
 
 .button__primary {
     background-color: chartreuse;
@@ -67,3 +75,5 @@ h4 {
     color: #2D2E46;
     opacity: 0.5;
 }
+
+
