--- a/src/App.css
+++ b/src/App.css
@@ -25,16 +25,50 @@
 
 .mainBlock{
     display: flex;
+    flex-direction: row;
     background-color: white;
-    padding: 30px;
+    margin: 30px;
     border-radius: 8px;
     box-shadow: 0px 4px 18px rgba(115, 146, 108, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+    height: 100%;
+    position: relative;
+
+
+}
+
+
+@media only screen and (min-width: 375px) and (max-width: 767px) {
+    .mainBlock {
+        flex-direction: column;
+    }
 }
 
 .left__panel {
     min-width: 240px;
     padding: 25px;
 }
+
+.center__panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+
+.table__panel {
+    min-height: 300px;
+    height: 100%;
+    min-width: 600px;
+    width: 100%;
+    margin-top: 20px;
+    position: relative;
+
+}
+
+
+
 
 .bottom__panel {
     display: flex;
