--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 .App {
     margin: 0 auto;
     height: 100%;
+    background: linear-gradient(180deg,  #8CE0EB 0%, #D2CCB1 100%);
 }
 
 .header {
@@ -28,7 +29,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(180deg,  #8CE0EB 0%, #D2CCB1 100%);
     height: calc(100vh - 60px);
 
 }
@@ -43,9 +43,8 @@
     height: 100%;
     position: relative;
     max-width: 1200px;
-    margin: auto;
-
-
+    min-width: 600px;
+    width: 100%;
 }
 
 
